; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-api.c_handler.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-api.c_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"ok %u %u %p %u\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"string from handler\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i64*, i32)* @handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @handler(i64 %0, i64 %1, i64* %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca [32 x i8], align 16
  %10 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i64, i64* %5, align 8
  %12 = trunc i64 %11 to i32
  %13 = load i64, i64* %6, align 8
  %14 = trunc i64 %13 to i32
  %15 = load i64*, i64** %7, align 8
  %16 = bitcast i64* %15 to i8*
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %14, i8* %16, i32 %17)
  %19 = load i32, i32* %8, align 4
  %20 = icmp eq i32 %19, 2
  %21 = zext i1 %20 to i32
  %22 = call i32 @TEST_ASSERT(i32 %21)
  %23 = load i64*, i64** %7, align 8
  %24 = getelementptr inbounds i64, i64* %23, i64 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @jerry_value_is_string(i64 %25)
  %27 = call i32 @TEST_ASSERT(i32 %26)
  %28 = load i64*, i64** %7, align 8
  %29 = getelementptr inbounds i64, i64* %28, i64 0
  %30 = load i64, i64* %29, align 8
  %31 = call i32 @jerry_get_string_size(i64 %30)
  store i32 %31, i32* %10, align 4
  %32 = load i32, i32* %10, align 4
  %33 = icmp eq i32 %32, 1
  %34 = zext i1 %33 to i32
  %35 = call i32 @TEST_ASSERT(i32 %34)
  %36 = load i64*, i64** %7, align 8
  %37 = getelementptr inbounds i64, i64* %36, i64 0
  %38 = load i64, i64* %37, align 8
  %39 = getelementptr inbounds [32 x i8], [32 x i8]* %9, i64 0, i64 0
  %40 = bitcast i8* %39 to i32*
  %41 = load i32, i32* %10, align 4
  %42 = call i32 @jerry_string_to_char_buffer(i64 %38, i32* %40, i32 %41)
  store i32 %42, i32* %10, align 4
  %43 = load i32, i32* %10, align 4
  %44 = icmp eq i32 %43, 1
  %45 = zext i1 %44 to i32
  %46 = call i32 @TEST_ASSERT(i32 %45)
  %47 = getelementptr inbounds [32 x i8], [32 x i8]* %9, i64 0, i64 0
  %48 = load i32, i32* %10, align 4
  %49 = sext i32 %48 to i64
  %50 = call i32 @strncmp(i8* %47, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i64 %49)
  %51 = icmp ne i32 %50, 0
  %52 = xor i1 %51, true
  %53 = zext i1 %52 to i32
  %54 = call i32 @TEST_ASSERT(i32 %53)
  %55 = load i64*, i64** %7, align 8
  %56 = getelementptr inbounds i64, i64* %55, i64 1
  %57 = load i64, i64* %56, align 8
  %58 = call i32 @jerry_value_is_boolean(i64 %57)
  %59 = call i32 @TEST_ASSERT(i32 %58)
  %60 = call i64 @jerry_create_string(i32* bitcast ([20 x i8]* @.str.2 to i32*))
  ret i64 %60
}

declare dso_local i32 @printf(i8*, i32, i32, i8*, i32) #1

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i32 @jerry_value_is_string(i64) #1

declare dso_local i32 @jerry_get_string_size(i64) #1

declare dso_local i32 @jerry_string_to_char_buffer(i64, i32*, i32) #1

declare dso_local i32 @strncmp(i8*, i8*, i64) #1

declare dso_local i32 @jerry_value_is_boolean(i64) #1

declare dso_local i64 @jerry_create_string(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
